--- a/app/assets/stylesheets/custom/bootstrap-variables-custom.scss
+++ b/app/assets/stylesheets/custom/bootstrap-variables-custom.scss
@@ -19,7 +19,9 @@
 // TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.~
 
 $theme-colors: (
-  "primary": #227BA4,
+  "primary": #990000,
+  "sbmred": #990000,
+  "sbmgray": #828282,
   "success": #2C9A4D,
   "warning": #F7983A,
   "danger": #C43149,
